Thu Dec 11 15:58:06 1997  Eric Mumpower  <nocturne@cygnus.com>

	* configure.in: Let --with-krb4 override the system Kerberos
	header files and libraries, if any.
	* configure: Regenerate.

Thu Dec  4 20:01:02 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* configure.in (AC_CHECK_FUNCS): Remove mempcpy per change to
	src/rcs.c.
	* configure: Regenerated (never was regenerated after getwd change).

1997-12-04  Jim Meyering  <meyering@na-net.ornl.gov>

	* configure.in (AC_CHECK_FUNCS): Add mempcpy.

Thu Dec  4 10:42:32 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* BUGS: Update for kfogel .cvswrappers fix.

Tue Dec  2 22:14:03 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* MINOR-BUGS: Update per info-cvs mail from Steve Cameron.

1997-11-29  Jim Kingdon

	* cvsnt.mak: Remove lib/getwd.c (see lib/ChangeLog for rationale).

	* cvsnt.mak: The usual "because Developer Studio feels like
	it" changes.

Sat Nov 29 22:10:32 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* configure.in (AC_REPLACE_FUNCS): Remove getwd (see lib/ChangeLog
	for rationale).

Mon Nov 24 10:36:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* INSTALL: Update QNX information per email from Michael Hunter of
	QNX.

Wed Nov 19 17:44:21 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* INSTALL: Add Sequent entry per bug-cvs report.

1997-11-17  Karl Fogel  <kfogel@floss.red-bean.com>

	* BUGS: Remove item about exporting binary files to non-unix
	clients; this is fixed.

Mon Nov 17 09:07:44 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* BUGS: Add yet another binary files problem.

1997-11-14  Karl Fogel  <kfogel@floss.red-bean.com>

	* cvsnt.mak: updated for diff/ subdir.

Fri Nov 14 12:25:10 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* BUGS: Remove item about dying gasps message.  At least one known
	cause has been fixed.

Wed Nov 12 20:24:49 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* FAQ: Re-import from FAQ-O-Matic.  Features a wording fix to