@@ -224,6 +224,8 @@ if test -z "$krb_h"; then
 fi
 AC_MSG_RESULT($krb_h)
 
+includeopt=
+AC_SUBST(includeopt)
 if test -n "$krb_h"; then
   krb_lib=
   if test "$cross_compiling" != yes && test -r $KRB4/lib/libkrb.a; then
@@ -251,11 +253,35 @@ if test -n "$krb_h"; then
     LDFLAGS=$hold_ldflags
     if test -n "$krb_incdir"; then
       includeopt="${includeopt} -I$krb_incdir"
-      AC_SUBST(includeopt)
     fi
   fi
 fi
 AC_CHECK_FUNCS(krb_get_err_text)
+
+dnl
+dnl Use --with-gssapi=DIR to enable GSSAPI support.
+dnl
+GSSAPI=/usr/cygnus/kerbnet
+define(WITH_GSSAPI,[
+AC_ARG_WITH([gssapi],
+  [  --with-gssapi=value     GSSAPI directory],
+  [GSSAPI=$withval],
+)dnl
+echo "default place for GSSAPI is $GSSAPI"
+AC_SUBST(GSSAPI)])dnl
+WITH_GSSAPI
+
+AC_MSG_CHECKING([for gssapi.h])
+hold_cflags=$CFLAGS
+CFLAGS="$CFLAGS -I$GSSAPI/include "
+AC_CHECK_HEADER(gssapi/gssapi.h,
+  [AC_DEFINE(HAVE_GSSAPI)
+   LIBS="$LIBS -L$GSSAPI/lib -lgssapi_krb5 -lkrb5 -lcrypto -lcom_err"
+   includeopt="${includeopt} -I$GSSAPI/include"
+   # This is necessary on Irix 5.3, in order to link against libkrb5 --
+   # there, an_to_ln.o refers to things defined only in -lgen.
+   AC_CHECK_LIB(gen, compile)])
+CFLAGS=$hold_cflags
 
 dnl
 dnl Use --with-encryption to turn on encryption support
